# erpnext-cli

./: .gitignore  LICENSE.txt  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  pyproject.toml  setup.py  setup_connected_app.py
erpnext_cli/: __init__.py  auth.py  cli.py  client.py  config.py
scripts/: README.md  create_team_user.py
