[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext-cli"
version = "0.1.0"
description = "OAuth2 PKCE CLI and Python SDK for ERPNext/Frappe"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "GeniNow", email = "david@geniinow.com"}
]
keywords = ["erpnext", "frappe", "cli", "oauth2", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "cryptography>=41.0.0",
    "rich>=13.0.0",
]

[project.scripts]
erpnext = "erpnext_cli.cli:main"

[project.urls]
Homepage = "https://github.com/davidmschy/erpnext-cli"
Repository = "https://github.com/davidmschy/erpnext-cli"
Issues = "https://github.com/davidmschy/erpnext-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["erpnext_cli*"]
